[package]
name = "bevy-breakout-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for main
# package?
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

[dependencies]
bevy_embedded_assets = "0.8.0"

[dependencies.bevy]
version = "0.11.2"
# Wayland does not work
# features = ["wayland"]
